# grupo-5-kirosonar

./: README.md  prompts.md
.kiro/: instructions.md  padrao-projeto.md
.kiro/specs/autofix-module/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cli-base/: design.md  requirements.md  tasks.md
.kiro/specs/git-diff-module/: design.md  requirements.md  tasks.md
.kiro/specs/report-module/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/ruff-precommit/: .config.kiro  design.md  requirements.md  tasks.md
Jobs/: LOBUNA 2.cdr  carimbo lobuna.cdr
Sysgraf/: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SETUP.md  TASK_1_1_SUMMARY.md  docker-compose.override.example.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
Sysgraf/.github/workflows/: ci.yml
Sysgraf/.kiro/specs/erp-grafica-expressa/: .config  .config.kiro  design.md  requirements.md  tasks.md
Sysgraf/config/rabbitmq/: rabbitmq.conf
Sysgraf/scripts/: backup-db.sh  init-db.sql  restore-db.sh
Sysgraf/services/api-gateway/: Dockerfile  package-lock.json  package.json
Sysgraf/services/api-gateway/src/: index.ts
Sysgraf/services/shared/messaging/: package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/docs/: PRD.md  prompts.md
backend/src/: ai_service.py  chunker.py  cli.py  git_module.py  prompt_builder.py
backend/tests/: test_cli.py  test_config.py  test_git_module.py  test_integration_js.py
scripts/: install-hooks.sh  pre-commit
(+12 files in other folders)
